=====================================
2010-04-03T18:19:29.567440Z ple-1_303
=====================================

  2010-04-03 18:18:26 (r2858) by rcaputo
  polo-event/Makefile.PL M; polo-event/lib/POE/Loop/Event.pm M

    Fix PLE dependencies and bump revision for release.

  2010-03-24 06:52:46 (r2852) by apocal
  poe M; polo-gtk/Makefile.PL M; polo-tk M; polo-event M; poe-test-loops
  M; polo-gtk M

    Set svn:ignore for: META.yml CHANGES run_network_tests PoLo-Gtk
    forgot to clean run_network_tests 

  2010-03-22 15:48:33 (r2847) by rcaputo
  polo-event/lib/POE/Loop/Event.pm M

    Resolve a test hang when trying to run with POE_TRACE_DEFAULT=1 and
    no events in the queue. 

  2010-03-11 05:06:03 (r2837) by apocal
  polo-event/Makefile.PL M; polo-tk/Makefile.PL M

    Add "run_network_tests" to "make clean" 

  2010-03-06 23:54:47 (r2826) by apocal
  polo-event/lib/POE/Loop/Event.pm M

    Add missing import line for Event.pm so the loop will load with
    POE_EVENT_LOOP env var 

=====================================
2009-08-27T04:27:04.178834Z ple-1_302
=====================================

  2009-08-27 04:25:09 (r2650) by rcaputo
  polo-event/Makefile.PL M; polo-event/lib/POE/Loop/Event.pm M

    Add the info test we forgot to include.

=====================================
2009-08-26T15:36:10.468146Z ple-1_301
=====================================

  2009-08-26 15:31:23 (r2644) by rcaputo
  polo-event/Makefile.PL M; polo-event/lib/POE/Loop/Event.pm M

    Add POE::Test::Loops to configure_requires and build_requires.

  2009-08-26 02:30:10 (r2637) by rcaputo; polo-event/Makefile.PL M

    We use the generic svn-log.perl, not the one included in POE.

=====================================
2009-08-26T02:22:29.916075Z ple-1_300
=====================================

  2009-08-25 17:05:17 (r2635) by rcaputo
  polo-gtk/lib/POE/Loop A; polo-gtk/lib/POE/Loop/Gtk.pm A;
  polo-tk/MANIFEST.SKIP A; polo-gtk/lib A; polo-gtk/MANIFEST A;