@@ -10,7 +10,7 @@ use strict;
 use POE::Loop::PerlSignals;
 
 use vars qw($VERSION);
-$VERSION = '1.303'; # NOTE - Should be #.### (three decimal places)
+$VERSION = '1.304'; # NOTE - Should be #.### (three decimal places)
 
 =for poe_tests
 
